re PR middle-end/13475 (ICE on SIMD variables with partial value initialization)

2003-12-23  Andrew Pinski  <pinskia@physics.uc.edu>

        PR middle-end/13475
        Backport from mainline:
                2003-06-19  Aldy Hernandez  <aldyh@redhat.com>

                * expr.c (const_vector_from_tree): Initialize remaining elements
                to 0.

From-SVN: r74977